# zenoh-python

./: Cargo.toml  pyproject.toml
.github/workflows/: release.yml
examples/: z_ping.py  z_pong.py
